# pokeapi-ebac

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: database.py  main.py  models.py  schemas.py
tests/: test_main.py
