[tool.poetry]
name = "pokeapi-ebac"
version = "0.1.0"
description = "Projeto Final - API de Pokémons com FastAPI"
authors = ["Majari Andressa da Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"